layout bug fixed/ navbar and sidebar components

--- a/src/Components/Navbar/Navbar.scss
+++ b/src/Components/Navbar/Navbar.scss
@@ -1,11 +1,11 @@
 .navbarFixed {
-    display:flex;
+    display: flex;
     position: fixed;
-    left: 0;
-    right: 0;
-    justify-content: space-between;
     height: 60px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    top: 0;
+    right: 0;
+    left: 0;
+    justify-content: space-between;
     border-bottom: 1px solid gray;
     z-index: 9999;
     background: rgb(2,0,36);
@@ -14,8 +14,14 @@
 
 .navbar{
     display: flex;
+    position: fixed;
     height: 60px;
+    top: 0;
+    right: 0;
+    left: 0;
     justify-content: space-between;
+    background: rgb(2,0,36);
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(2,0,31,1) 3%, rgba(0,0,0,1) 20%, rgba(0,0,0,1) 80%, rgba(2,0,31,1) 97%, rgba(2,0,36,1) 100%);
 }
 
 .leftSide{
