--- a/src/Components/SideBar/SideBar.scss
+++ b/src/Components/SideBar/SideBar.scss
@@ -7,16 +7,19 @@
     height: 100vh;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     border-right: 1px solid gray;
-    z-index: 9999;
-    margin-top: 60px;
+    top: 60px;
+    left: 0;
 }
 
 .sideBar{
     display: flex;
+    position: fixed;
     flex-direction: column;
     align-items: flex-end;
     width: 66px;
     height: 100vh;
+    top: 60px;
+    left: 0px;
 }
 
 div{
